--- a/templates/index.html
+++ b/templates/index.html
@@ -62,8 +62,8 @@
         <div class="row space-100">
           <div class="col-lg-6 col-md-12 col-xs-12">
             <div class="contents">
-              <h2 class="head-title">OpenShift !! <br>Praticamente Instantâneo!</h2>
-              <p>Esta aplicação de exemplo foi provisionada pelo <strong>Openshift</strong>!<br><i>- Hector Vido, curso de Openshift</i></p>
+              <h2 class="head-title">OpenShift!!! EAD!!!<br>Praticamente Instantâneo!</h2>
+              <p>Esta aplicação de exemplo foi provisionada pelo <strong>Openshift</strong>!<br><i>- Aluno William, curso de Openshift</i></p>
               <div class="header-button">
                 <a href="#" class="btn btn-border-filled">Começar</a>
                 <a href="#contact" class="btn btn-border page-scroll">Fale Conosco</a>
